; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_libvpxdec.c_decode_frame.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_libvpxdec.c_decode_frame.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VPX_CODEC_OK = common dso_local global i64 0, align 8
@AV_LOG_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [28 x i8] c"Failed to decode frame: %s\0A\00", align 1
@.str.1 = private unnamed_addr constant [30 x i8] c"  Additional information: %s\0A\00", align 1
@AVERROR_INVALIDDATA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32*, i32)* @decode_frame to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @decode_frame(i32* %0, i32* %1, i32* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  %12 = load i32*, i32** %7, align 8
  %13 = load i32*, i32** %8, align 8
  %14 = load i32, i32* %9, align 4
  %15 = call i64 @vpx_codec_decode(i32* %12, i32* %13, i32 %14, i32* null, i32 0)
  %16 = load i64, i64* @VPX_CODEC_OK, align 8
  %17 = icmp ne i64 %15, %16
  br i1 %17, label %18, label %36

18:                                               ; preds = %4
  %19 = load i32*, i32** %7, align 8
  %20 = call i8* @vpx_codec_error(i32* %19)
  store i8* %20, i8** %10, align 8
  %21 = load i32*, i32** %7, align 8
  %22 = call i8* @vpx_codec_error_detail(i32* %21)
  store i8* %22, i8** %11, align 8
  %23 = load i32*, i32** %6, align 8
  %24 = load i32, i32* @AV_LOG_ERROR, align 4
  %25 = load i8*, i8** %10, align 8
  %26 = call i32 @av_log(i32* %23, i32 %24, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i8* %25)
  %27 = load i8*, i8** %11, align 8
  %28 = icmp ne i8* %27, null
  br i1 %28, label %29, label %34

29:                                               ; preds = %18
  %30 = load i32*, i32** %6, align 8
  %31 = load i32, i32* @AV_LOG_ERROR, align 4
  %32 = load i8*, i8** %11, align 8
  %33 = call i32 @av_log(i32* %30, i32 %31, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.1, i64 0, i64 0), i8* %32)
  br label %34

34:                                               ; preds = %29, %18
  %35 = load i32, i32* @AVERROR_INVALIDDATA, align 4
  store i32 %35, i32* %5, align 4
  br label %37

36:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %37

37:                                               ; preds = %36, %34
  %38 = load i32, i32* %5, align 4
  ret i32 %38
}

declare dso_local i64 @vpx_codec_decode(i32*, i32*, i32, i32*, i32) #1

declare dso_local i8* @vpx_codec_error(i32*) #1

declare dso_local i8* @vpx_codec_error_detail(i32*) #1

declare dso_local i32 @av_log(i32*, i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
